src/test/ui/panic-implementation/panic-implementation-deprecated.stderr
error: use of deprecated attribute `panic_implementation`: this attribute was renamed to `panic_handler`. See https://github.com/rust-lang/rust/issues/44489#issuecomment-415140224
  --> $DIR/panic-implementation-deprecated.rs:19:1
   |
LL | #[panic_implementation]
   | ^^^^^^^^^^^^^^^^^^^^^^^ help: replace this attribute with `#[panic_handler]`
   |
note: lint level defined here
  --> $DIR/panic-implementation-deprecated.rs:13:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

